--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "node src/index.js",
     "daily": "node src/jobs/daily.js",
     "weekly": "node src/jobs/weekly.js",
+    "dashboard": "node src/dashboard/server.js",
     "validate": "node src/validate-env.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "dev:dashboard": "node --watch src/dashboard/server.js"
   },
   "keywords": [
     "lesson-analysis",
@@ -22,13 +24,15 @@
   "license": "MIT",
   "dependencies": {
     "googleapis": "^131.0.0",
-    "openai": "^4.68.0",
+    "@google/generative-ai": "^0.21.0",
+    "hono": "^4.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "p-retry": "^6.2.1"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.27",
