--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "googleapis": "^131.0.0",
     "@google/generative-ai": "^0.21.0",
     "hono": "^4.0.0",
+    "@hono/node-server": "^1.13.7",
     "fluent-ffmpeg": "^2.1.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
