Add daily:test script for testing with first row only

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "daily": "node src/jobs/daily.js",
+    "daily:test": "node src/jobs/daily-test.js",
     "weekly": "node src/jobs/weekly.js",
     "dashboard": "node src/dashboard/server.js",
     "validate": "node src/validate-env.js",
