Add test script to diagnose Drive folder access

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dashboard": "node src/dashboard/server.js",
     "validate": "node src/validate-env.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "test:drive": "node src/test-drive-folders.js",
     "dev": "node --watch src/index.js",
     "dev:dashboard": "node --watch src/dashboard/server.js"
   },
