--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "googleapis": "^131.0.0",
     "@google/generative-ai": "^0.21.0",
-    "hono": "^4.0.0",
     "@hono/node-server": "^1.13.7",
-    "fluent-ffmpeg": "^2.1.3",
     "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "winston": "^3.17.0",
-    "p-retry": "^6.2.1"
+    "dotenv": "^16.4.7",
+    "fluent-ffmpeg": "^2.1.3",
+    "googleapis": "^131.0.0",
+    "hono": "^4.0.0",
+    "node-cron": "^4.2.1",
+    "p-retry": "^6.2.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.27",
