Improve Gemini transcription to process entire audio
Issues identified:
- Video is 56 minutes but only 1 minute of speech detected
- Transcription coverage only 2% - clearly incomplete

Changes:
- Enhanced Gemini prompt to explicitly request full transcription from start to end
- Added audio duration estimate in prompt to help Gemini understand length
- Added logging of Gemini response length for debugging
- Created debug:transcription script to check coverage percentage
- Script analyzes duration vs speaking time to detect incomplete transcriptions

The improved prompt emphasizes:
1. Transcribe from beginning to end without stopping
2. Handle long audio files completely
3. Skip only silent periods
4. Maintain consistent speaker labels

This should fix the issue where Gemini was only transcribing a small portion of the audio.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "test:drive": "node src/test-drive-folders.js",
     "debug:dates": "node src/debug-video-dates.js",
+    "debug:transcription": "node src/debug-transcription.js",
     "clear:errors": "node src/clear-error-rows.js",
     "test:auth": "node src/test-auth-detailed.js",
     "dev": "node --watch src/index.js",
