Implement parallel processing and error monitoring
Features:
1. Parallel Processing:
   - Process multiple tutors concurrently (default: 5)
   - Reduce processing time from 7 hours to 1.5-2 hours
   - Configurable via MAX_CONCURRENCY env var
   - Automatic concurrency calculation based on item count
   - Detailed logging per chunk and item

2. Parallel Processor Utility:
   - processInParallel(): Process items with concurrency control
   - calculateOptimalConcurrency(): Auto-adjust for small batches
   - Error tracking with Promise.allSettled
   - Results and errors returned separately

3. Error Monitoring Script:
   - npm run monitor:errors
   - Calculate error rate and alert if >20%
   - Group errors by date, tutor, and error type
   - Recent trends analysis (last 7 days)
   - Top 10 tutors with most errors
   - Top 5 common error types

4. Configuration:
   - MAX_CONCURRENCY env var (default: 5)
   - Updated .env.example
   - Added to config/env.js

Files changed:
- src/utils/parallelProcessor.js (new)
- src/jobs/daily.js (parallel processing)
- src/monitor-errors.js (new)
- src/config/env.js (MAX_CONCURRENCY)
- package.json (monitor:errors script)
- .env.example (MAX_CONCURRENCY)

Expected improvement:
- 35 tutors × 12 min avg = 420 min (7 hours) sequential
- 35 tutors / 5 parallel × 12 min = 84 min (1.4 hours) parallel
- Memory usage: Stable with 5 concurrent (4GB sufficient)

Usage:
- npm run daily (with parallel processing)
- npm run monitor:errors (check error rates)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:drive": "node src/test-drive-folders.js",
     "debug:dates": "node src/debug-video-dates.js",
     "debug:transcription": "node src/debug-transcription.js",
+    "monitor:errors": "node src/monitor-errors.js",
     "clear:errors": "node src/clear-error-rows.js",
     "test:auth": "node src/test-auth-detailed.js",
     "dev": "node --watch src/index.js",
