--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 services:
-  - type: worker
+  - type: web
     name: wannav-lesson-analyzer
     env: node
     region: oregon
     plan: starter
     buildCommand: npm install
-    startCommand: echo "Worker ready. Jobs are triggered by GitHub Actions."
+    startCommand: node src/index.js
     envVars:
       - key: NODE_ENV
         value: production
@@ -17,7 +17,9 @@ services:
         sync: false
       - key: GOOGLE_PRIVATE_KEY
         sync: false
-      - key: OPENAI_API_KEY
+      - key: GOOGLE_AI_API_KEY
         sync: false
       - key: ASSEMBLYAI_API_KEY
         sync: false
+      - key: MAX_CONCURRENCY
+        value: "5"
