--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node src/index.js",
     "daily": "node src/jobs/daily.js",
     "daily:test": "node src/jobs/daily-test.js",
+    "daily:full": "node src/jobs/daily.js",
     "weekly": "node src/jobs/weekly.js",
     "dashboard": "node src/dashboard/server.js",
     "validate": "node src/validate-env.js",
