--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# SSO Authentication (WannaV Dashboard)
+JWT_SECRET=your-shared-secret-key-here
+DASHBOARD_URL=https://wannav-main.onrender.com
+
 # Google Sheets API
 GOOGLE_SHEETS_ID=1gFrIbkRxNcpKuT0vRNfaUdSrJWynlCdfqhGQz9vWwWo
 GOOGLE_SERVICE_ACCOUNT_EMAIL=your-service-account@your-project.iam.gserviceaccount.com
