--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "googleapis": "^131.0.0",
     "hono": "^4.0.0",
+    "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1",
     "p-retry": "^6.2.1",
     "winston": "^3.17.0"
