Fix: Add header fix script and emotion analysis debug logging
- Add fix-headers.js script to add missing person_name header
- Add emotion analysis debug logging to track returned values
- Add npm script: fix:headers
- This will help identify why confusion_ratio is always 0.3

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "monitor:errors": "node src/monitor-errors.js",
     "clear:errors": "node src/clear-error-rows.js",
     "test:auth": "node src/test-auth-detailed.js",
+    "fix:headers": "node fix-headers.js",
     "dev": "node --watch src/index.js",
     "dev:dashboard": "node --watch src/dashboard/server.js"
   },
